--- a/.github/workflows/release-bonita-portal-look-and-feel.yml
+++ b/.github/workflows/release-bonita-portal-look-and-feel.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   createGithubRelease:
     name: Create release
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
     steps:
       - name: Setup checkout
         uses: actions/checkout@v2
