--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>bonita-portal-look-and-feel</artifactId>
     <name>Web looknfeel</name>
     <packaging>jar</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <scm>
         <developerConnection>scm:git:git@github.com:bonitasoft/bonita-portal-look-and-feel.git</developerConnection>
