--- a/.github/workflows/publish-artefacts.yml
+++ b/.github/workflows/publish-artefacts.yml
@@ -7,10 +7,6 @@ on:
         description: base tag version to publish
         default: 1.12.X
         required: true
-      pushMavenCentral:
-        description: true to push on artifactory
-        default: false
-        required: true
   repository_dispatch:
     types: [ github-publish ]
 
@@ -31,19 +27,13 @@ jobs:
                 echo "##[set-output name=branchToRelease;]$(echo ${{ github.ref }})"
                 echo "##[set-output name=pushMavenCentral;]$(echo ${{ github.event.inputs.pushMavenCentral == 'true' }})"
             fi
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ steps.init.outputs.tagVersion }}
 
-      - name: Create maven settings
-        if: ${{ success() && ( github.event.action == 'github-publish' || steps.init.outputs.pushMavenCentral == 'true')}}
-        uses: whelk-io/maven-settings-xml-action@v4
-        with:
-          servers: '[{ "id": "releases", "username": "bonita-ci", "password": "${{ secrets.JFROG_AUTH }}" }]'
-
-      - name: Publish artefact
-        if: ${{ success() && ( github.event.action == 'github-publish' || steps.init.outputs.pushMavenCentral == 'true')}}
-        run: ./mvnw deploy -DskipTests -DaltDeploymentRepository=releases::default::https://bonitasoft.jfrog.io/artifactory/libs-release-local/
+      - name: Publish
+          env:
+            MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+            MAVEN_CENTRAL_TOKEN: ${{ secrets.OSSRH_PASSWORD }}
+            MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          run: mvn --batch-mode release:perform
 
       - name: Build binaries
         if: ${{ success() && ( github.event.action != 'github-publish' &&  steps.init.outputs.pushMavenCentral != 'true')}}
