--- a/.github/workflows/release-bonita-portal-look-and-feel.yml
+++ b/.github/workflows/release-bonita-portal-look-and-feel.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@main
         with:
           distribution: 'temurin'
           java-version: 11
