--- a/.github/workflows/release-bonita-portal-look-and-feel.yml
+++ b/.github/workflows/release-bonita-portal-look-and-feel.yml
@@ -12,11 +12,13 @@ jobs:
     name: Create release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
       - name: Setup Java
-        uses: actions/setup-java@main
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 11
@@ -26,6 +28,7 @@ jobs:
           server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }} # Value of the GPG private key to import
           gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
+
       - name: Configure Git user
         run: |
           git config user.email "actions@github.com"
