--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bonitasoft.console</groupId>
     <artifactId>bonita-portal-look-and-feel</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <version>1.0.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>Web looknfeel</name>
     <description>Bonita look and feel used by Bonita portal.</description>
