refactor: make cleanup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portal-lookNfeel",
+  "name": "bonita-portal-look-and-feel",
   "version": "0.0.0",
   "devDependencies": {
     "less": "2.5.1",
