--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches: [ main ]
 
@@ -14,19 +17,12 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 11
-          cache: 'maven'
-          server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
-          server-username: MAVEN_USERNAME # env variable for username in deploy
-          server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
-          gpg-private-key: ${{ secrets.gpg_private_key }} # Value of the GPG private key to import
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
-      - name: Build and deploy
+      - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           MAVEN_USERNAME: ${{ secrets.ossrh_username }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.ossrh_password }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.gpg_passphrase }}
-        run: ./mvnw -B -ntp clean deploy
+        run: ./mvnw -B -ntp clean package
 
