--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bonitasoft.console</groupId>
     <artifactId>bonita-portal-look-and-feel</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Web looknfeel</name>
+    <name>Bonita portal look and feel </name>
     <description>Bonita look and feel used by Bonita portal.</description>
     <url>https://www.bonitasoft.com/</url>
 
