--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <version>1.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Bonita portal look and feel </name>
+    <name>Bonita Portal Look And Feel</name>
     <description>Bonita look and feel used by Bonita portal.</description>
     <url>https://www.bonitasoft.com/</url>
 
