tr(gh-action): replace deprecated github action create-release
actions/create-release is not maintained anymore and is running on deprecated Node12 (see https://github.blog/changelog/2022-09-22-github-actions-all-actions-will-begin-running-on-node16-instead-of-node12/)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,20 +40,10 @@ jobs:
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: mvn --batch-mode release:perform
 
-      - name: Get current date
-        id: date
-        shell: bash
-        run: |
-          echo "releaseDate=$(date +"%Y-%m-%d")" >> $GITHUB_ENV
-
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: Release ${{ github.event.inputs.version }}
-          body: Release ${{ github.event.inputs.version }} (${{ env.releaseDate}})
-          draft: false
-          prerelease: false
+          tag: ${{ github.event.inputs.version }}
+          name: Release ${{ github.event.inputs.version }}
+          generateReleaseNotes: true
